test/chainsaw/runtimepolicy-valid/policy-minimal.yaml
apiVersion: runtime.kyverno.io/v1alpha1
kind: RuntimePolicy
metadata:
  name: chainsaw-valid-minimal
spec: {}
